# AI-Quiz-Generator

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ab65e2e97995_initial_migration.py
app/: main.py
app/LLMs/: client.py
app/api/auth/: routes.py  schemas.py  services.py
app/api/feedback/: routes.py  services.py
app/api/quiz/: routes.py  schemas.py  services.py
app/core/: config.py  depedencies.py  prompts.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  feedback.py  profile.py  quiz.py  user.py
app/db/repositories/: feedback.py  profile.py  quiz.py  user.py
app/vectorDB/: embeddings.py  vector_store.py
